{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 33,
  "lineage": "7ad69185-e591-db18-705a-886369555fe7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginxServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08bf489a05e916bbd",
            "arn": "arn:aws:ec2:ap-south-1:851725419285:instance/i-0f05fce9d19537255",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f05fce9d19537255",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb837dd9ca37f074",
            "private_dns": "ip-10-0-1-151.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_ip": "13.201.86.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0044dc13337e20011",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b225a4e5c6ce2f0",
            "tags": {
              "Name": "nginxServer"
            },
            "tags_all": {
              "Name": "nginxServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7e2c8687cf8d36e"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.public-tf-subnet",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:internet-gateway/igw-0a89e3b665b115f16",
            "id": "igw-0a89e3b665b115f16",
            "owner_id": "851725419285",
            "tags": {
              "Name": "my-tf-igw"
            },
            "tags_all": {
              "Name": "my-tf-igw"
            },
            "vpc_id": "vpc-0bc41bdf667d0b26d"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-tf-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:route-table/rtb-070612c9bd1ef2b44",
            "id": "rtb-070612c9bd1ef2b44",
            "owner_id": "851725419285",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a89e3b665b115f16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-tf-rtb"
            },
            "tags_all": {
              "Name": "my-tf-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc41bdf667d0b26d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my-tf-igw",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051ecb3d711d1654f",
            "route_table_id": "rtb-070612c9bd1ef2b44",
            "subnet_id": "subnet-01b225a4e5c6ce2f0"
          },
          "dependencies": [
            "aws_internet_gateway.my-tf-igw",
            "aws_route_table.my-tf-rtb",
            "aws_subnet.public-tf-subnet",
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:security-group/sg-0f7e2c8687cf8d36e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7e2c8687cf8d36e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241111222938948400000001",
            "name_prefix": "terraform-",
            "owner_id": "851725419285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bc41bdf667d0b26d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-tf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:subnet/subnet-0859ea17bbb830c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0859ea17bbb830c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725419285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-tf-subnet"
            },
            "tags_all": {
              "Name": "private-tf-subnet"
            },
            "vpc_id": "vpc-0bc41bdf667d0b26d"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-tf-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:subnet/subnet-01b225a4e5c6ce2f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b225a4e5c6ce2f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725419285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-tf-subnet"
            },
            "tags_all": {
              "Name": "public-tf-subnet"
            },
            "vpc_id": "vpc-0bc41bdf667d0b26d"
          },
          "dependencies": [
            "aws_vpc.my-tf-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725419285:vpc/vpc-0bc41bdf667d0b26d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06235d570f4a49f4f",
            "default_route_table_id": "rtb-07eb70fa9ec84908e",
            "default_security_group_id": "sg-055a6b0019a53b02c",
            "dhcp_options_id": "dopt-046a15f0711c65901",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bc41bdf667d0b26d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eb70fa9ec84908e",
            "owner_id": "851725419285",
            "tags": {
              "Name": "my-tf-vpc"
            },
            "tags_all": {
              "Name": "my-tf-vpc"
            }
          }
        }
      ]
    }
  ]
}